turn-a-day/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turn-a-day
  namespace: turn-a-day
spec:
  replicas: 2
  selector:
    matchLabels:
      app: turn-a-day
  template:
    metadata:
      labels:
        app: turn-a-day
    spec:
      containers:
      - name: turn-a-day
        image: docker.io/nibir/turn-a-day:29d32fb
        # image: docker.io/nibir/turn-a-day:debug # Uncomment for debug image
        imagePullPolicy: Always
        ports:
        - containerPort: 80
